# PST2MBOX

./: README.md  diagnostico.py  pst2mbox.py  pst2mbox.spec  pyproject.toml
src/pst2mbox.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
